# fclap

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  fpm.toml  meson.build  meson_options.txt
.github/workflows/: ci.yml
config/: CMakeLists.txt  install-mod.py  meson.build
config/cmake/: Findtest-drive.cmake
docs/: requirements.txt
docs/source/: conf.py  documentation.rst  tutorial.rst
docs/source/_static/: .gitkeep
docs/source/api/: fclap.rst
example/: demo.f90  example.f90
examples/: example.f90
src/: CMakeLists.txt  fclap.f90  fclap_actions.f90  fclap_constants.f90  fclap_errors.f90  fclap_formatter.f90  fclap_namespace.f90  fclap_parser.f90  meson.build
src/fclap/: CMakeLists.txt  argparser.f90  fclap.f90  fclap_actions.f90  fclap_constants.f90  fclap_errors.f90  fclap_formatter.f90  fclap_namespace.f90  fclap_parser.f90  genral_info.md  meson.build  utils.f90
src/fclap/error/: codes.f90  entry.f90  stack.f90
src/fclap/formatter/: abstract.f90  standard.f90
src/fclap/old/: old_error.f90
src/fclap/utils/: CMakeLists.txt  accuracy.f90  fclap_version.f90  meson.build  version.f90
test/: CMakeLists.txt  meson.build
test/unit/: CMakeLists.txt  main.f90  meson.build  test_namespace.f90
